# Popush

./: .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  deny.toml  get-popush.sh  index.html  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tailwind.config.js  tsconfig.json  tsconfig.node.json  uninstall.sh  vite.config.ts  vitest.setup.ts
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
docs/: DECISIONS.md  config.example.toml  security.md  service-types.md  setup.md  troubleshooting.md
packaging/desktop/: dev.popush.Popush.desktop
packaging/desktop/icons/: README.md  generate-pngs.sh
packaging/flatpak/: dev.popush.Popush.metainfo.xml  dev.popush.Popush.yml
packaging/rpm/: popush.spec
popush-core/: Cargo.toml
popush-core/examples/: generate_types.rs
popush-core/src/: command_log.rs  error.rs  ids.rs  lib.rs  redact.rs
popush-core/src/adapters/: docker.rs  mod.rs  pm2.rs  static_site.rs  systemd.rs
popush-core/src/config/: loader.rs  mod.rs  schema.rs  writer.rs
popush-core/src/git/: mod.rs  remote.rs
popush-core/src/github/: mod.rs
popush-core/src/pipeline/: messages.rs  mod.rs  step.rs
popush-core/src/ssh/: command.rs  hostkey.rs  known_hosts.rs  mod.rs
popush-core/src/wizard/: checks.rs  fixes.rs  mod.rs
popush-core/tests/: directives.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  ops.rs  state.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/git/: commit.rs  mod.rs
src-tauri/src/github/: api.rs  mod.rs
src-tauri/src/pipeline/: events.rs  mod.rs  ship.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/wizard/: mod.rs
src-tauri/tests/: integration.rs
src/__tests__/: StatusDot.test.tsx  banned-strings.test.ts
src/components/ActionBar/: index.tsx
src/components/AddServerDialog/: index.tsx
src/components/AddServerDialog/__tests__/: AddServerDialog.test.tsx
src/components/AddSiteDialog/: index.tsx
src/components/AppHeader/: index.tsx
src/components/CommandPalette/: index.tsx
src/components/ConfirmDeleteDialog/: index.tsx
src/components/EmptyState/: index.tsx
src/components/EmptyState/__tests__/: EmptyState.test.tsx
src/components/GitPanel/: index.tsx
src/components/GitPanel/__tests__/: GitPanel.test.tsx
src/components/LogDrawer/: index.tsx
src/components/LogDrawer/__tests__/: LogDrawer.test.tsx
src/components/Pipeline/: index.tsx
src/components/Pipeline/__tests__/: Pipeline.test.tsx
src/components/Sidebar/: index.tsx
src/components/SiteCard/: index.tsx
src/components/StatusDot/: index.tsx
src/components/ui/: Button.tsx  Dialog.tsx  Field.tsx  Logo.tsx  PageGlow.tsx  Skeleton.tsx  Spinner.tsx  StatusLabel.tsx  StatusPill.tsx  Tooltip.tsx
src/components/ui/__tests__/: Button.test.tsx  Dialog.test.tsx
src/hooks/: usePipelineEvents.ts
src/lib/: ansi.ts  cn.ts  ipc.ts  slug.ts  time.ts  url.ts
src/lib/__tests__/: ansi.test.ts  url.test.ts
src/store/: deploys.ts  modals.ts  pipeline.ts  servers.ts  sites.ts
src/store/__tests__/: modals.test.ts
src/styles/: globals.css  tokens.css
src/styles/fonts/: README.md
src/types/: generated.ts
src/views/: AboutView.tsx  CommandLogView.tsx  HelpView.tsx  SettingsView.tsx  SiteView.tsx  WizardContainer.tsx  WizardView.tsx
src/views/__tests__/: HelpView.test.tsx
test-vps/: .gitignore  Dockerfile  README.md  authorized_keys  docker-compose.yml  generate-key.sh
test-vps/sites/: README.md
test-vps/sites/docker-site/: compose.yaml
test-vps/sites/pm2-site/: ecosystem.config.js  server.js
test-vps/sites/static-site/: index.html
test-vps/sites/systemd-site/: popush-systemd-site.service  run.sh
website/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  index.css  main.tsx
website/src/components/: ConfigTabs.tsx  CopyButton.tsx  CtaBand.tsx  Download.tsx  Faq.tsx  Features.tsx  FloatingDeco.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Icons.tsx  PipelineDemo.tsx  ScrollProgress.tsx  ScrollTop.tsx  StarBurst.tsx  Stats.tsx  Terminal.tsx
website/src/hooks/: useReveal.ts  useTheme.ts
website/src/lib/: os.ts  site.ts
