# Popush Tauri binary. Built by twostep.
#
# This crate is the thin presentation/IPC shell (D14): it wires popush-core's
# logic into Tauri commands and events and adds the socket-level I/O (russh,
# git2, keyring, notify). It links WebKitGTK and only builds on the Linux target
# (D1); popush-core carries everything that is testable without a display.
[package]
name = "popush"
description = "Popush: your VPS, one click away. A native Linux desktop deployment client."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
default-run = "popush"

[lib]
name = "popush_lib"
crate-type = ["lib"]

[[bin]]
name = "popush"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
popush-core = { path = "../popush-core" }

tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-opener = "2.0.0"

tokio = { version = "1.42.0", features = ["full"] }
russh = "0.45.0"
russh-keys = "0.45.0"
async-trait = "0.1.83"
git2 = "0.19.0"
keyring = { version = "3.6.1", features = ["sync-secret-service", "crypto-rust"] }
notify = "7.0.0"
directories = "5.0.1"

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
url.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
# `custom-protocol` is used by Tauri for production builds.
custom-protocol = ["tauri/custom-protocol"]
